fix: :lipstick: Fix collapsing userstats level items

--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -59,7 +59,7 @@
   &__item {
     margin-top: $space-xxs;
     flex: 1;
-    min-width: 125px;
+    min-width: 100px;
   }
   &__stat {
     display: block;
